--- a/INSTALL
+++ b/INSTALL
@@ -52,15 +52,12 @@ after return impl->path;
 add this just before the function closes: 
     #endif
 
-OR MERGE the files included in my fork (vstguiFilestoReplace) with the vstgui inside the vst3sdk/vstgui4/ directory
-You can do it either manually or with command: cp -r  <dir1>/* <dir2>
-
 5.
 Now should MERGE the vst2_sdk files (pluginterfaces and public.sdk) into your vst3sdk
 
 Strangely enough the latest update from steinberg doesn't include pluginterfaces!
 But if you find an older release should be ok...
-here: https://github.com/R-Tur/VST_SDK_2.4
+Like that one here: https://github.com/R-Tur/VST_SDK_2.4
 
 6.
 Now should be able to build with:
