--- a/INSTALL
+++ b/INSTALL
@@ -47,10 +47,41 @@ add:
     return impl->path;
     #if 0
 
-after return impl->path;
+after the second "return impl->path";
 
-add this just before the function closes: 
+add this: 
     #endif
+    
+It 'll look like this:
+std::string Platform::getPath ()
+{
+	return impl->path;
+	#if 0
+	if (impl->path.empty () && soHandle)
+	{
+		struct link_map* map;
+		if (dlinfo (soHandle, RTLD_DI_LINKMAP, &map) == 0)
+		{
+			auto path = std::string (map->l_name);
+			for (int i = 0; i < 3; i++)
+			{
+				int delPos = path.find_last_of ('/');
+				if (delPos == -1)
+				{
+					fprintf (stderr, "Could not determine bundle location.\n");
+					return {}; // unexpected
+				}
+				path.erase (delPos, path.length () - delPos);
+			}
+			auto rp = realpath (path.data (), nullptr);
+			path = rp;
+			free (rp);
+			std::swap (impl->path, path);
+		}
+	}
+	return impl->path;
+	#endif
+}
 
 5.
 Now should MERGE the vst2_sdk files (pluginterfaces and public.sdk) into your vst3sdk
